# PJSUA2-Desktop

./: .gitignore  CMakeLists.txt  README.macos.md  README.md  dev-cli.ts  llm.txt  package-lock.json  package.json
apps/electron-app/: README.md  index.html  main.js  package-lock.json  package.json
apps/expo-app/: app.json  package-lock.json  package.json
apps/expo-app/app/: _layout.tsx  index.tsx
apps/expo-app/electron/: main.js  package-lock.json  package.json  preload.js
apps/expo-app/lib/: PJSIPSip.ts
apps/react-native-app/: README.md
bindings/cli/: CMakeLists.txt  README.md  main.cpp
bindings/node/: README.md  binding.cpp  binding.gyp  compile_flags.txt  copy_pjsip_libs.sh
bindings/react-native/jsi/: README.md
platform/: CMakeLists.macos.txt  CMakeLists.windows.txt
sip-core-cpp/: CMakeLists.txt  pjsip_manager.cpp  pjsip_manager.hpp
sip-core-cpp/common/: error_handling.hpp
sip-core-cpp/platform/: CMakeLists.linux.txt  README.Windows.md
sip-core-cpp/scripts/: build_pjsip.sh  copy_pjsipfiles.sh
src/: CMakeLists.txt  main.cpp  pjsip_manager.cpp  pjsip_manager.hpp
